<resources>
    <string name="app_name">Frienner</string>
    <string name="google_signin_button">Google로 가입하기</string>
    <string name="kakao_signin_button">Kakao로 가입하기</string>
    <string name="naver_signin_button">Naver로 가입하기</string>
    <string name="signIn_Text">일정에 따라 생성되는 맞춤형 체크리스트, \n\n나의 취향에 맞는 장소 추천 서비스를 이용해보세요!</string>
    <string name="signIn_Text2">로그인 또는 회원가입 시 개인정보 처리방침에 동의하게 됩니다.</string>
    <string-array name="custom_weekdays">
        <item>일</item>  <!-- Sunday -->
        <item>월</item>  <!-- Monday -->
        <item>화</item>  <!-- Tuesday -->
        <item>수</item>  <!-- Wednesday -->
        <item>목</item>  <!-- Thursday -->
        <item>금</item>  <!-- Friday -->
        <item>토</item>  <!-- Saturday -->
    </string-array>


    <string name="signIn_id">로그인</string>
    <string name="signIn_id_et">Email</string>
    <string name="signIn_pw">Password</string>
    <string name="signIn_pw_et">비밀번호를 입력해주세요.</string>
    <string name="signIn_login">로그인</string>
    <string name="signIn_signup">회원가입</string>
    <string name="toast_msg_noinput">입력되지 않은 정보가 있습니다.</string>
    <string name="toast_msg_idpqErr">ID/PW를 확인해주세요.</string>
    <string name="signup_name">Username</string>
    <string name="signup_name_et">이름을 입력해주세요.</string>
    <string name="cancle">CANCLE</string>


    <string name="back_button">뒤로 가기</string>
    <string name="search_button">검색하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>